src/App.css
html, body{
  margin: 0;
}

#root {
  display: flex;
  flex-direction: column;
  min-height: 100dvh;
  max-width: 1280px;
  margin: 0 auto;
  text-align: center;
}

main{
  flex:1;
}

#timeSelect{
 padding: 15px;
 margin: 20px;
 display: flex;
 justify-content: center;
}

#questionMark{
    width: 75px;
    position:fixed;
    right: 0px;
    bottom: 0px;
}

#questionMark:hover{
    cursor: pointer;
}


#help{
  position: absolute;
  top: 50%;
  margin-top: -30%;

  display: flex;
  flex-direction: column;
  justify-self: center;

  border: 5px inset rgba(0, 0, 0, 0.507);
  background-color: rgb(0, 255, 255);
  width: 70vw;
  padding: 20px;
  text-align: center;

  display: none;
}

